--- a/test/data/html/ansi.html
+++ b/test/data/html/ansi.html
@@ -166,7 +166,7 @@
             "siteSection": "library", "subSectionOne": "reference", "subSectionTwo": "code-lists", "subSectionThree": "ansi"
           },
           "pageTag": {
-            "geography": "All States", "program": "Tribal Affairs (AIAN) Program", "geography": "All States|National", "program": "Tribal Affairs (AIAN) Program|Geography Program"
+            "geography": "All States", "program": "${workspaceFolder}/test/Tribal Affairs (AIAN) Program", "geography": "All States|National", "program": "${workspaceFolder}/test/Tribal Affairs (AIAN) Program|Geography Program"
           }
         },
         "event": {
