update README and tests

--- a/test/data/html/helloworld.html
+++ b/test/data/html/helloworld.html
@@ -1,7 +1,10 @@
 <html>
   <body>
-    <table>
+    <table id="greeter">
       <tr><td>Hello World!</td></tr>
+    </table>
+    <table id="table2">
+      <tr><td>Hello Universe!</td></tr>
     </table>
   </body>
 </html>
