--- a/test/data/html/helloworld.html
+++ b/test/data/html/helloworld.html
@@ -1,9 +1,9 @@
 <html>
   <body>
-    <table id="greeter">
+    <table id="global">
       <tr><td>Hello World!</td></tr>
     </table>
-    <table id="table2">
+    <table id="cosmic">
       <tr><td>Hello Universe!</td></tr>
     </table>
   </body>
